# eggs_on_drones

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  main.cpp
include/: drone.h  input.h  world.h
src/: CMakeLists.txt  drone.cpp  input.cpp  world.cpp
tests/: CMakeLists.txt  test_drone.cpp  test_input.cpp  test_world.cpp
